<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background"
    tools:context=".LoginPage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#1C658C">

        <ImageView
            android:id="@+id/back_to_login"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:onClick="backToMain"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="50dp"
            android:fontFamily="@font/hebrewfont"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </RelativeLayout>


    <TextView
        android:id="@+id/log_in_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/log_in_to_get_started"
        android:textColor="@color/black"
        android:textSize="35sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/log_in_tv"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:endIconTint="@color/black"
            app:startIconTint="@color/black"
            android:hint="@string/user_name"
            android:padding="15dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieLogin1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="textPersonName"


                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:endIconTint="@color/black"
            app:startIconTint="@color/black"
            android:padding="15dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieLogin2"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/remember_me"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:text="@string/forgot_your_password"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="15sp" />


        </RelativeLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:cardBackgroundColor="@color/btn_background"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="משתמש חדש?"
            android:layout_marginStart="7dp"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openSignup"
            android:text=" לחץ פה "
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="19sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="בשביל ליצור משתמש"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </LinearLayout>


</RelativeLayout>